Исправил баг с удалением всей иерархии view, когда пользователь выходил из расширенного меню с ячейками

--- a/Breakout/Base.lproj/Main.storyboard
+++ b/Breakout/Base.lproj/Main.storyboard
@@ -1746,7 +1746,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="zZ2-TM-33E"/>
+        <segue reference="zr8-MN-Mqj"/>
         <segue reference="rui-cb-CKg"/>
     </inferredMetricsTieBreakers>
     <resources>
